syntax = "proto3";
package message;
option go_package = "github.com/meeranh/protobuf";

message MyMessage {
	oneof my_data {
		sint32 my_num = 1;
		string my_msg = 2;
	}
}
